# ceres_practice

./: CMakeLists.txt  README.md
src/: completion.cc  data_consistency.h  denoising.cc  diffusion.cc  spatial_smoothness.h  utils.h
test/stereo_and_depth/SDF50J/: SDF50J_2.dmap  camera.txt
test/stereo_and_depth/TB/: camera.txt
